# MagnumGame

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: Components.h
modules/: FindBullet.cmake  FindCorrade.cmake  FindMagnum.cmake  FindMagnumIntegration.cmake
src/: OLD_main.cpp  cmakeV2  dummy.cpp  globals.cpp  globals.h  main.cpp  main.h  mainV2.cpp  main_Client.cpp  main_Client.h  main_server.cpp  main_server.h  trueMainClient.cpp
src/ECS/: Components.hpp  Deserialization.cpp  Registry.hpp  Serialization.cpp  Systems.cpp  Systems.hpp
src/NetWork/: Client.cpp  Client.hpp  Serialization.hpp  Server.cpp  Server.hpp  Shared_Input.cpp  Shared_Input.h  Shared_Objects.cpp  Shared_Objects.h
src/Physics/: ColoredDrawable.h  MotionState.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  Rigidbody.h
src/Rendering/: RenderingSystem.cpp  RenderingSystem.h
src/Utils/: Input.hpp
